# NEBLab

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/state/: agent-replay-535317a3-f569-4a9f-a7aa-af35329cfa45.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
alembic/: env.py
alembic/versions/: 6627483126b5_initial_documents_and_abstracts.py  722c363381ae_sprint1_add_fulltexts_table.py  c1449e4ae094_sprint2_add_chunks_table_drop_abstracts_.py
docs/: PlanRAG.md
docs/superpowers/plans/: 2026-05-01-rag-v1-plan-01-foundation.md  2026-05-19-citation-chunk-preview-plan.md
docs/superpowers/specs/: 2026-05-01-rag-v1-design.md  2026-05-19-citation-chunk-preview-design.md
evals/runs/: sprint-1-fulltext-no-book-2026-05-03T000721Z.json  sprint-1-fulltext-v0.1-2026-05-02T174845Z.json  sprint-1-v0.2-with-cap-2026-05-03T125254Z.json  sprint-2-baseline-2026-05-02T113600Z.json  sprint-2.5-all-on-2026-05-02T142725Z.json  sprint-2.5-no-bm25-2026-05-02T143500Z.json  sprint-2.5-softened-prompt-2026-05-02T144608Z.json  sprint-2.5-v1-baseline-2026-05-02T153141Z.json  sprint-4-rewriter-judge-2026-05-02T120306Z.json  sprint-4-rewriter-on-2026-05-02T115211Z.json  sprint-5d-planning-baseline-2026-05-05T044105Z.json  v1-86q-baseline-2026-05-03T152653Z.json  v2-2k-corpus-flat-2026-05-03T194306Z.json  v2-2k-corpus-hierarchical-2026-05-03T204111Z.json  v2-2k-hier-chunk1000-2026-05-04T195940Z.json  v2-2k-hier-top8-2026-05-03T232153Z.json  v2-2k-hier-topk7-2026-05-04T003246Z.json
evals/v1/: baseline-findings.md  corpus-inventory-2026-05-05.md  draft-batch2-picks.json  draft-batch2.json  planning-questions.json  questions.json  sprint-1-fulltext-v0.1-findings.md  sprint-1-fulltext-v0.2-findings.md  sprint-2.5-final-findings.md  sprint-2.5-findings.md  sprint-2.5-v1-baseline-findings.md  sprint-3-v03-citation-preview-findings.md  sprint-4-judge-findings.md  sprint-4-rewriter-ab.md  sprint5-corpus-hierarchical-findings.md  sprint5b-chunk-size-1000-findings.md  sprint5d-planning-findings.md  v2-86q-baseline-findings.md
scripts/: corpus_stats.py  generate_eval_questions.py  ingest_and_reindex.sh  reindex_all.py  reset_qdrant.py  smoke_run.sh
src/neblab_rag/: config.py  logging_config.py
src/neblab_rag/api/: main.py
src/neblab_rag/corpus/: cli.py  fulltext.py  ingestion.py  openalex_client.py  topics.py
src/neblab_rag/db/: __init__.py  engine.py  models.py  repositories.py
src/neblab_rag/eval/: __init__.py  __main__.py  data.py  judge.py  metrics.py  planning_judge.py  planning_main.py  runner.py
tests/: conftest.py
tests/integration/: test_query_e2e.py
tests/unit/: test_config.py  test_logging.py
web/: next.config.ts  package.json  pnpm-lock.yaml
(+68 files in other folders)
