[project]
name = "neblab-rag"
version = "0.1.0"
description = "RAG knowledge base for Northern Ecological Barrier Lab"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "asyncpg>=0.30",
  "psycopg2-binary>=2.9",
  "httpx>=0.27",
  "qdrant-client>=1.12",
  "pyalex>=0.15",
  "structlog>=24.4",
  "python-dotenv>=1.0",
  "sse-starlette>=2.1",
  "tenacity>=9.0",
  "click>=8.1",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "ruff>=0.7",
  "pyright>=1.1.380",
  "pre-commit>=4.0",
  "ipython>=8.28",
]

[project.scripts]
neblab-ingest = "neblab_rag.corpus.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neblab_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
  "E501",   # line length handled by formatter
  "RUF001", # ambiguous-unicode-character-string  — false positive on CJK punctuation
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
  "integration: tests requiring local Postgres + Qdrant Cloud + real API keys (skipped in CI)",
]
